# bilbo-baggins

./: main.py  report_generator_agent.py  web_search_agent.py
backend/: README.md  api.py  main.py  pyproject.toml  rag_agent.py  redis_store.py  report_generator_agent.py  web_search_agent.py
backend/utils/: llm.py  types.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: Navbar.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/prisma/: index.ts  schema.prisma
frontend/prisma/migrations/20250327105155_init/: migration.sql
frontend/prisma/migrations/20250403110700_added_clerkid/: migration.sql
frontend/prisma/migrations/20250406153156_cancelled_using_clerk/: migration.sql
