[project]
name = "bilbo-baggins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.45",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.11",
    "python-dotenv>=1.0.1",
]
