[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vasabi07 <vasanthanarulselvan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langgraph = "^0.3.18"
fastapi = "^0.115.11"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.9"
uvicorn = "^0.34.0"
openai = "^1.68.2"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
